--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <script src="js/main.js"></script>
 </head>
 <body>
-    <h1>Tek967's Landing Page</h1>
-    <p>Welcome to EasonTek's Alternate Github Landing Page!</p>
+    <h1 class="H1">Tek967's Landing Page</h1>
+    <p class="P">Welcome to EasonTek's Alternate Github Landing Page!</p>
+    <a href="toolbox/jstest.html"><button class="buttonGray"> ToolBox</button></a>
 </body>
 </html>
