--- a/qemu-puma-win10.html
+++ b/qemu-puma-win10.html
@@ -20,7 +20,7 @@
 </p>
 <p style="margin-bottom: 0in; line-height: 100%"><font color="#c9211e"><font size="4" style="font-size: 14pt">1.
 Get the installer at qemu.weilnetz.de/w64</font></font></p>
-<p style="margin-bottom: 0in; line-height: 100%"><img src="qemu-puma-win10_html_afe5be29c4fba1e.png" name="Image1" align="left" width="555" height="366" border="0"/>
+<p style="margin-bottom: 0in; line-height: 100%"><img src="1.png" name="Image1" align="left" width="555" height="366" border="0"/>
 <br/>
 
 </p>
@@ -73,7 +73,7 @@ open File explorer and right click on This PC</font></p>
 Select properties</font></p>
 <p style="margin-bottom: 0in; line-height: 100%"><font size="4" style="font-size: 14pt">C:
 Scroll and Select Advanced System Settings</font></p>
-<p style="margin-bottom: 0in; line-height: 100%"><img src="qemu-puma-win10_html_9b68ad205207b5dc.png" name="Image2" align="left" width="624" height="445" border="0"/>
+<p style="margin-bottom: 0in; line-height: 100%"><img src="2.png" name="Image2" align="left" width="624" height="445" border="0"/>
 <br/>
 
 </p>
@@ -132,7 +132,7 @@ Click PATH and edit.</font></p>
 <p style="margin-bottom: 0in; line-height: 100%"><font size="4" style="font-size: 14pt">F:
 Click New and input <a href="../../../Program">C:\Program</a>
 Files\qemu into the field.</font></p>
-<p style="margin-bottom: 0in; line-height: 100%"><img src="qemu-puma-win10_html_20947d0880d419f1.png" name="Image3" align="left" width="865" height="957" border="0"/>
+<p style="margin-bottom: 0in; line-height: 100%"><img src="3.png" name="Image3" align="left" width="865" height="957" border="0"/>
 <font size="4" style="font-size: 14pt">G:
 Click OK and then OK again.</font></p>
 <p style="margin-bottom: 0in; line-height: 100%"><font size="4" style="font-size: 14pt">H:
