--- a/index.html
+++ b/index.html
@@ -39,6 +39,6 @@
     <h1 class="H1">Tek967's Landing Page</h1>
     <p class="P">Welcome to EasonTek's Alternate Github Landing Page!</p>
     <a href="toolbox/jstest.html"><button class="buttonGray"> ToolBox</button></a>
-    <a href="winedevineinst.bash"><button class="buttonGray">Chromium Winedevine Installer for Linux</button></a>
+    <a href="winedevineinst.sh"><button class="buttonGray">Chromium Winedevine Installer for Linux</button></a>
 </body>
 </html>
