--- a/apikeys.html
+++ b/apikeys.html
@@ -1,14 +1,30 @@
-<html>
- API KEY
-
-AIzaSyD6e2_lOStMyZNXmB5CUcW4vuRDW8qjaRg
-
-OAUTH CLIENT 
-
-233293171133-73ir7k9cneu5hub9nktfp51pu519p2t0.apps.googleusercontent.com
-
-CLIENT SECRET
-
-4z7X3D2Zww4plRFA9QCap-5Z
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="main.css">
+    <title>Document</title>
+</head>
+<body>
+    <h3> API KEY</h3>
+    <br>
+    <p>AIzaSyD6e2_lOStMyZNXmB5CUcW4vuRDW8qjaRg</p>
+    <br>
+    <h3>OAuth Client ID</h3>
+    <br
+    <p>233293171133-73ir7k9cneu5hub9nktfp51pu519p2t0.apps.googleusercontent.com</p>
+    <br>
+    <h3>OAuth Client Secret<h3>
+    <br>
+    <p>4z7X3D2Zww4plRFA9QCap-5Z</p>
+    <br>
+</body>
 </html>
+
+
+
+
+
+
