--- a/index.html
+++ b/index.html
@@ -5,34 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tek967's Landing Page</title>
-    <style>
-        body {
-        background-color: rgb(157, 241, 230);
-    
-    }
-    .P {
-        color: rgb(1, 30, 63);
-        font-family: "Helvetica Neue";
-        font-size: 14px;
-        text-align: center;
-    }
-    .H1 {
-        color: rgb(1, 30, 63);
-        font-family: "Helvetica Neue";
-        font: 30px;
-        text-align: center;
-    }
-    .buttonGray {
-        width: 100px;
-        height: 50px;
-        color: #303030;
-        border-radius: 10px;
-        background-color: rgb(194, 192, 192);
-        animation-delay: 0.5s;
-    
-
-    }
-    </style>
+    <link rel="stylesheet" href="main.css">
     <script src="/js/main.js"></script>
 </head>
 <body>
