--- a/apikeys.html
+++ b/apikeys.html
@@ -8,15 +8,15 @@
     <title>Document</title>
 </head>
 <body>
-    <h3> API KEY</h3>
+    <h3 class="H3"> API KEY</h3>
     <br>
     <p>AIzaSyD6e2_lOStMyZNXmB5CUcW4vuRDW8qjaRg</p>
     <br>
-    <h3>OAuth Client ID</h3>
-    <br
+    <h3 class="H3">OAuth Client ID</h3>
+    <br>
     <p>233293171133-73ir7k9cneu5hub9nktfp51pu519p2t0.apps.googleusercontent.com</p>
     <br>
-    <h3>OAuth Client Secret<h3>
+    <h3 class="H3">OAuth Client Secret</h3>
     <br>
     <p>4z7X3D2Zww4plRFA9QCap-5Z</p>
     <br>
