--- a/chromiumos.html
+++ b/chromiumos.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chromium OS Builds</title>
+    <title>Chromium OS IMGs</title>
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    
+    <h1 class="H1">ChromiumOS Daily Builds</h1>
+    <p class="P">Hello and Welcome! Here I will provide ChromiumOS Daily Builds/IMGs for you to use and download. These are updated DAILY and there are NO autoupdates so pick a build and use it. If you wanna upgrade then reflash a new version.</p>
+    <p class="P">DO NOT use this as a daily-driver unless you are very adventurous. These are rolled right off the trunk so they are F--- Unstable.</p>
+    <p class="P">You can use BalenaEtcher <a class="P" href="balena.io/etcher">(DOWNLOAD HERE)</a> or DD from a linux terminal to write it to a USB Stick or use a live linux distro with the image on it and flash it that way.</p>
 </body>
 </html>
