--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     <h1 class="H1">Tek967's Landing Page</h1>
     <p class="P">Welcome to EasonTek's Alternate Github Landing Page!</p>
     <a href="toolbox/jstest.html"><button class="buttonGray"> ToolBox</button></a>
-    <a href="chromiumos.html"><button class="buttonGray">Chromium Daily Builds</button></a>
+    <a href="chromiumos.html"><button class="buttonGray">ChromiumOS Daily Builds</button></a>
 </body>
 </html>
