--- a/r91.html
+++ b/r91.html
@@ -12,6 +12,7 @@
     <p class="P">Hello and Welcome! Here I will provide ChromiumOS Daily Builds/IMGs for you to use and download. These are updated DAILY and there are NO autoupdates so pick a build and use it. If you wanna upgrade then reflash a new version.</p>
     <p class="P">DO NOT use this as a daily-driver unless you are very adventurous. These are rolled right off the trunk so they are F--- Unstable.</p>
     <p class="P">You can use BalenaEtcher <a class="P" href="balena.io/etcher">(DOWNLOAD HERE)</a> or DD from a linux terminal to write it to a USB Stick or use a live linux distro with the image on it and flash it that way.</p>
-    <a href="r91.html"><button class="buttonGray">Release 91</button></a>
+    <a href="#"><button class="buttonGray">Build 13834</button></a>
+    <a href="#"><button class="buttonGray">Build 13835</button></a>
 </body>
 </html>
