--- a/r91.html
+++ b/r91.html
@@ -11,7 +11,7 @@
     <h1 class="H1">ChromiumOS Daily Builds</h1>
     <p class="P">Hello and Welcome! Here I will provide ChromiumOS Daily Builds/IMGs for you to use and download. These are updated DAILY and there are NO autoupdates so pick a build and use it. If you wanna upgrade then reflash a new version.</p>
     <p class="P">DO NOT use this as a daily-driver unless you are very adventurous. These are rolled right off the trunk so they are F--- Unstable.</p>
-    <p class="P">You can use BalenaEtcher <a class="P" href="balena.io/etcher">(DOWNLOAD HERE)</a> or DD from a linux terminal to write it to a USB Stick or use a live linux distro with the image on it and flash it that way.</p>
+    <p class="P">You can use BalenaEtcher <a class="P" href="balena.io/etcher">(DOWNLOAD HERE)</a> or DD from a linux terminal to write it to a USB Stick or use a live linux distro with the image on it and flash it that way. Downloads are in .tar.lzma so you need something like 7-zip on Windows or TheUnarchiver on macOS</p>
     <a href="#"><button class="buttonGray">Build 13834</button></a>
     <a href="#"><button class="buttonGray">Build 13836</button></a>
 </body>
