--- a/r91.html
+++ b/r91.html
@@ -13,6 +13,6 @@
     <p class="P">DO NOT use this as a daily-driver unless you are very adventurous. These are rolled right off the trunk so they are F--- Unstable.</p>
     <p class="P">You can use BalenaEtcher <a class="P" href="balena.io/etcher">(DOWNLOAD HERE)</a> or DD from a linux terminal to write it to a USB Stick or use a live linux distro with the image on it and flash it that way. Downloads are in .tar.lzma so you need something like 7-zip on Windows or TheUnarchiver on macOS</p>
     <a href="https://drive.google.com/u/1/uc?export=download&confirm=BwBp&id=19vSJ5jGGs6yJMoT6vuspxtW78AHVVuSg"><button class="buttonGray">Build 13834</button></a>
-    <a href="https://drive.google.com/u/1/uc?export=download&confirm=iq9k&id=1PYzedRb5DWw0j0DzTdVV_Pgr-XCfonld"><button class="buttonGray">Build 13836</button></a>
+    <a href="https://drive.google.com/u/0/uc?export=download&confirm=aqTe&id=1pgXWOwIfSr1Fm2O5pVxARysUHD0m4pRc"><button class="buttonGray">Build 13836</button></a>
 </body>
 </html>
