--- a/apikeys.html
+++ b/apikeys.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main.css">
     <title>Document</title>
 </head>
 <body>
     <h3 class="H3"> API KEY</h3>
     <br>
-    <p>AIzaSyD6e2_lOStMyZNXmB5CUcW4vuRDW8qjaRg</p>
+    <p>AIzaSyBt2qduUsLERhnEeH8H-LIQN35JYCnxYdU</p>
     <br>
     <h3 class="H3">OAuth Client ID</h3>
     <br>
-    <p>233293171133-73ir7k9cneu5hub9nktfp51pu519p2t0.apps.googleusercontent.com</p>
+    <p>934681020795-6drm85mcefidsptihbt3qc3mrv1a7ipt.apps.googleusercontent.com</p>
     <br>
     <h3 class="H3">OAuth Client Secret</h3>
     <br>
-    <p>4z7X3D2Zww4plRFA9QCap-5Z</p>
+    <p>
+l1ZlHzq_6Wf5dhzt0Z20OLGr</p>
     <br>
 </body>
 </html>
