--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
     <h1 class="H1">Tek967's Landing Page</h1>
     <p class="P">Welcome to EasonTek's Alternate Github Landing Page!</p>
     <a href="toolbox/jstest.html"><button class="buttonGray">ToolBox</button></a>
-    <a href="chromiumos.html"><button class="buttonGray">ChromiumOS Daily Builds</button></a>
-    <br>
-    <a href="https://drive.google.com/uc?export=download&confirm=xXBF&id=1BQ5hP6atKFBYZKHTywxhp10hmkfSmO6k"><button class="buttonGray" style="height: 90px;">ArnoldTheBat's Modified Special r89 Build</button></a>
+    <a href="chromium.html"><button class="buttonGray">PolishedChromium</button></a>
 </body>
 </html>
