--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <p class="P">Welcome to EasonTek's Alternate Github Landing Page!</p>
     <a href="toolbox/jstest.html"><button class="buttonGray">ToolBox</button></a>
     <a href="chromium.html"><button class="buttonGray" style="width: 150px;">PolishedChromium</button></a>
+    <a href="chromiumapk.html"><button class="buttonGray" style="width: 210px;">Chromium For Android</button></a>
 </body>
 </html>
